--- a/openy_lily/sass/paragraphs/_paragraphs.scss
+++ b/openy_lily/sass/paragraphs/_paragraphs.scss
@@ -521,3 +521,14 @@
     }
   }
 }
+
+.paragraph--type--grid-columns {
+  .field-prgf-grid-clm-description {
+    .field-media-image {
+      img {
+        max-width: 100%;
+        max-height: none;
+      }
+    }
+  }
+}
